--- a/src/Acme.BookStore.Web/Pages/Books/Index.cshtml
+++ b/src/Acme.BookStore.Web/Pages/Books/Index.cshtml
@@ -11,13 +11,22 @@
     <abp-script src="/Pages/Books/index.js" />
 }
 <abp-card>
-    <abp-card-header>
-        <h2>@L["Book"]</h2>
-    </abp-card-header>
+    <abp-row>
+        <abp-column size-md="_6">
+            <h2>@L["Book"]</h2>
+        </abp-column>
+        <abp-column size-md="_6" class="text-right">
+            <abp-button id="NewBookButton"
+                        text="@L["NewBook"].Value"
+                        icon="plus"
+                        button-type="Primary" />
+        </abp-column>
+    </abp-row>
     <abp-card-body>
         <abp-table striped-rows="true" id="BookTable">
             <thead>
                 <tr>
+                    <th>@L["Actions"]</th>
                     <th>@L["Name"]</th>
                     <th>@L["Type"]</th>
                     <th>@L["PublishDate"]</th>
